[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/items/axt.png" type="Texture" id=1]
[ext_resource path="res://scenes/items/item.gd" type="Script" id=2]
[ext_resource path="res://shaders/outline.shader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/texture_size = Vector2( 64, 64 )
shader_param/intensity = null
shader_param/precision = 0.02
shader_param/outline_color = Color( 0, 0.980392, 0.909804, 0.733333 )

[sub_resource type="SpriteFrames" id=2]
resource_local_to_scene = true
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 15.5564
height = 40.0

[sub_resource type="Animation" id=4]
resource_name = "end"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("animSprite:material:shader_param/intensity")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 120, 160, 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "pulse"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("animSprite:material:shader_param/intensity")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 120, 80, 140, 120 ]
}

[sub_resource type="Animation" id=6]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("animSprite:material:shader_param/intensity")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 160, 120 ]
}

[node name="Node2D" type="Node2D" groups=[
"item",
]]
script = ExtResource( 2 )
item_categories = [ 2, 4, 6 ]

[node name="animSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -32 )
frames = SubResource( 2 )
animation = "idle"

[node name="pickupArea" type="Area2D" parent="."]
position = Vector2( 0, -32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickupArea"]
rotation = 0.785398
shape = SubResource( 3 )

[node name="ShaderAnimator" type="AnimationPlayer" parent="."]
anims/end = SubResource( 4 )
anims/pulse = SubResource( 5 )
anims/start = SubResource( 6 )
next/start = "pulse"
blend_times = [ "pulse", "end", 0.2 ]

[node name="Tween" type="Tween" parent="."]
